--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,13 @@
 {
     "presets": [
         "@babel/preset-env"
+    ],
+    "plugins": [
+        [
+            "@babel/plugin-transform-react-jsx", 
+            { 
+                "pragma": "createElement"
+            }
+        ]
     ]
 }
