--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "Recycled",
+  "name": "umbrella",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "app": "webpack serve --config webpack.config.js"
+    "dev": "webpack serve --config ./webpack/dev.js",
+    "build": "webpack --config ./webpack/prod.js"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-react-jsx": "^7.17.12",
     "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.13",
@@ -20,6 +24,10 @@
     "tailwindcss": "^2.2.16",
     "webpack": "^5.56.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
