--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^3.3.0",
     "tailwindcss": "^2.2.16",
+    "url-loader": "^4.1.1",
     "webpack": "^5.56.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.1",
